[김상헌] 빙고

--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="board"></div>
+    <h1>빙고개수</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.6.0/socket.io.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
