--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,9 @@
   <body>
     <div class="board"></div>
     <h1>빙고개수 0개</h1>
+    <div class="result-layer">
+      축하드립니다.모든 빙고를 완료하였습니다.
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.6.0/socket.io.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
